--- a/Public/Prosjekter.html
+++ b/Public/Prosjekter.html
@@ -18,6 +18,22 @@
     <h1>Prosjekter</h1>
 </header>
 <body>
-    
+ <div class="prosjekter">
+  <div class="bildeOgTekst">
+    <img src="Images/Logo Portfolio.png" alt="Bilde av prosjekt ">
+    <p>Jeg lagde den nye portfolio nettsiden på grunn av jeg var ikke fornøyd 
+      med designet så da lagde jeg en ny. Først
+    </p>
+  </div>
+  <div class="bildeOgTekst">
+    <p></p>
+  </div>
+ </div> 
+ <button></button>  
 </body>
+<footer>
+  <a href="index.html" class="footer-btn">Hovedside</a>
+  <a href="OmMeg.html" class="footer-btn">Om meg</a>
+  <a href="cv.html" class="footer-btn">CV</a>
+</footer>
 </html>
