--- a/Public/Prosjekter.html
+++ b/Public/Prosjekter.html
@@ -20,9 +20,12 @@
 <body>
  <div class="prosjekter">
   <div class="bildeOgTekst">
-    <img src="Images/Logo Portfolio.png" alt="Bilde av prosjekt ">
+    <img id="Portfolio" src="Images/Logo Portfolio.png" alt="Bilde av prosjekt ">
     <p>Jeg lagde den nye portfolio nettsiden på grunn av jeg var ikke fornøyd 
-      med designet så da lagde jeg en ny. Først
+      med designet så da lagde jeg en ny. Først så begynte jeg med designen og designmanualen og da kom jeg fram til gull og 
+      marin blå farge for bakgrunnen og tekst
+
+
     </p>
   </div>
   <div class="bildeOgTekst">
