--- a/Public/OmMeg.html
+++ b/Public/OmMeg.html
@@ -14,7 +14,7 @@
     />
   </head>
   <header>
-    <img src="Images/Logo Portfolio.png" alt="Logo" />
+    <img onclick="menu()" src="Images/Logo Portfolio.png" alt="Logo" />
     <h1>Om Meg</h1>
   </header>
   <body>
@@ -43,6 +43,7 @@
     <img src="Images/BildeAvMeg.jpg" alt="Bilde av meg">
   </div>  
   </body>
+  <script src="js/script.js"></script>
   <footer>
     <a href="index.html" class="footer-btn">Hovedside</a>
     <a href="Prosjekter.html" class="footer-btn">Prosjekter</a>
