--- a/Public/cv.html
+++ b/Public/cv.html
@@ -1,36 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV</title>
     <link rel="icon" href="Images/Logo Portfolio.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="CSS/cv.css">
+    <link rel="stylesheet" href="CSS/cv.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Bangers&family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
       rel="stylesheet"
     />
-</head>
-<header>
+  </head>
+  <header>
     <img src="Images/Logo Portfolio.png" alt="Logo" />
     <h1>CV</h1>
-</header>
-<body>
-  <div id="cvBox">
-  <img src="Images/BildeCV.jpg" alt="Bilde av meg" >
-  <h1>Elev på Bleiker Videregående. Går på IT og medie første året og jeg
-     lærer nå hvordan jeg skal designe, filme og programmere.
-     Drømmekarriere er Cybersecurity og fortsetter å jobbe med å nå drømmen.
-     Sertifisert kretsdommer av Norges Svømmeforbund og profesjonell svømmer. Er også en Ansatt på Shell Vettre og har erfæring
-     med salg og service.</h1>
+  </header>
+  <body>
+    <div id="cvBox">
+      <img src="Images/BildeCV.jpg" alt="Bilde av meg" />
+      <h2>Dawid Cieslinski</h2>
+      <ul>
+        <li>Telefonnummer: 99879693</li>
+        <li>E-mail: dawid.cieslinski@gmail.com</li>
+        <li>Adresse: Gleinåsveien 15, 3440, RØYKEN</li>
+        
+      </ul>
+      <h1>
+        Elev på Bleiker Videregående. Går på IT og medie første året og jeg
+        lærer nå hvordan jeg skal designe, filme og programmere. Drømmekarriere
+        er Cybersecurity og fortsetter å jobbe med å nå drømmen. Sertifisert
+        kretsdommer av Norges Svømmeforbund og profesjonell svømmer. Er også en
+        Ansatt på Shell Vettre og har erfæring med salg og service.
+      </h1>
+      <div id="cvInnhold">
+        <br>
+        <hr/>
+        <br>
+        <h3>Utdanning</h3>
+        <h4>2022.08-2024.06</h4>
+        <h4>Vollen Ungdomskole</h4>
+        <ul>
+          <li>Python for matte</li>
+        </ul>
+        <br>
+        <hr id="underSec">
+        <h4>2024.08 - 2026.06</h4>
+        <h4>Bleiker Videregående</h4>
+        <h6>Konseputvikling og Programmering</h6>
+        <ul>
+          <li>Lærte Html og Css og brukte den for å skape nettsider.
+          </li>
+          <li>Lagde designmanualer for å vise funskjoner, fargene, bilder brukt og hvem som er målgruppen.</li>
+          <li>Lærte Javascript og brukte den for å skape funskjoner i nettsiden for brukere. </li>
+          <li>Har jobbet med databaser og har koblet dem sammen for å få registrert brukeren og kryptere passordet hans/hennes</li>
+        </ul>
+        <br>
+        <br>
+        <h6>Produksjon og Historiefortelling</h6>
+        <ul>
+          <li>Redigerte Videoer, Bilder for å gjøre dem om til ferdig produkt</li>
+          <li>Designet Logo, Layouts og Plakater i timene</li>
+          <li>
+            Kom i finalen på innovasjonscamp 2024 for å designe en app for Asker
+            kommune
+          </li>
+        </ul>
+        <br>
+        <hr/>
+        <br>
+        <h3>Arbeidserfaring</h3>
+        <h4>2023.10</h4>
+        <h4>Kundemedarbeider (Shell Vettre)</h4>
+        <ul>
+          <li>Erfaring i Salg og Service</li>
+          <li>Erfaring med matlagging og baking</li>
+        </ul>
+        <hr id="underSec">
+        <h4>2024.06</h4>
+        <h4>Kretsdommer (Norges Svømmeforbund)</h4>
+        <ul>
+          <li>Erfaring som dommer i svømming</li>
+          <li>Erfaring med regler i svømming</li>
+        </ul>
+        <hr id="underSec">
+        <h4>2023.02 - 2023.02</h4>
+        <h4>Jobbet på Burger King (Hospitering)</h4>
+        <ul>
+          <li>Matlagging</li>
+          <li>Matpreperasjon</li>
+        </ul>
+        <br>
+        <hr/>
+        <br>
+        <h3>Ferdigheter</h3>
+        <h4>Språk</h4>
+        <ul>
+          <li>Norsk (Muntlig) - Høy</li>
+          <li>Norsk (Skriftig) - Middels/Høy</li>
+          <li>Engelsk (Muntlig) - Høy</li>
+          <li>Engelsk (Skriftig) - Høy</li>
+          <li>Polsk (Muntlig) - Middels</li>
+          <li>Polsk (Skriftig) - Lav/Middels</li>
+        </ul>
+        <hr id="underSec">
+        <h4>Digitale Ferdigheter</h4>
+        <ul>
+          <li>Kan Visual Studio Code</li>
+          <li>Greier å bruke illustrator for å lage logo</li>
+          <li>Kan Adobe XD</li>
+          <li>Kan Adobe Lightroom og Photoshop</li>
+          <li>Kan HTML og CSS</li>
+          <li>Kan Javascript</li>
+          <li>Kan Python</li>
+        </ul>
+        <br>
+        <hr/>
+        <br>
+        <h3>Kurser</h3>
 
-  </div>  
-</body>
-<footer>
-  <a href="index.html" class="footer-btn">Hovedside</a>
-  <a href="OmMeg.html" class="footer-btn">Om meg</a>
-  <a href="cv.html" class="footer-btn">CV</a>
-</footer>
+        <h4>2024.05</h4>
+        <h4>Norges Svømmeforbunds Kretsdommer kurset</h4>
+        <ul>
+          <li>Fikk sertifikat som kretsdommer</li>
+          <li>Fikk erfaring med regler i svømming</li>
+        </ul>
+        <br>
+        <hr/>
+        <br>
+        <h3>Interesser</h3>
+        <ul>
+          <li>Svømming</li>
+          <li>Gaming</li>
+          <li>Trening</li>
+          <li>Koding</li>
+          <li>Lage logo</li>
+          <li>Lesing</li>
+        </ul>
+        <br>
+        <hr/>
+        <br>
+        <h3>Referanser</h3>
+        <h4>Patrick Andre Fuglehaug Detlefsen (Lærer)</h4>
+        <ul>
+          <li>patrickdet@afk.no</li>
+        </ul>
+          
+      </div>
+    </div>
+    <script src="js/script.js"></script>
+  </body>
+  <footer>
+    <a href="index.html" class="footer-btn">Hovedside</a>
+    <a href="OmMeg.html" class="footer-btn">Om meg</a>
+    <a href="Prosjekter.html" class="footer-btn">Prosjekter</a>
+  </footer>
 </html>
