--- a/Public/index.html
+++ b/Public/index.html
@@ -16,6 +16,7 @@
   </header>
   <body>
     <h2>Velkommen</h2>
+    <script src="js/script.js"></script>
   </body>
   <footer>
     <a href="OmMeg.html" class="footer-btn">Om Meg</a>
