--- a/Public/OmMeg.html
+++ b/Public/OmMeg.html
@@ -27,7 +27,8 @@
       <p>Min drømmejobb: CyberSecurity</p>
       <p>Jobber som: Ansatt på Shell, Kretsdommer i Svømming</p>
       <p>Ting jeg liker: Katter, Gaming, Anime og Manga</p>
-      <p>E-post: <a href="https://mail.google.com/mail/u/1/#inbox?compose=GTvVlcRwRrlpMbgtmsHpzvlnnJsrXffhwsNRtPXFpGcNmrPLdcWvLphJRZVbtqKHBCdtbxmVnrGrQ">dawid.cieslinski020608@gmail.com</a></p>
+      <p>E-post: </p>
+      <a href="https://mail.google.com/mail/u/1/#inbox?compose=GTvVlcRwRrlpMbgtmsHpzvlnnJsrXffhwsNRtPXFpGcNmrPLdcWvLphJRZVbtqKHBCdtbxmVnrGrQ">dawid.cieslinski020608@gmail.com</a>
       <p>Telefon nummer: 99879693</p>
       <p>Ting jeg liker:</p>
       <ul>
@@ -45,7 +46,7 @@
   </body>
   <script src="js/script.js"></script>
   <footer>
-    <a href="index.html" class="footer-btn">Hovedside</a>
+    <a href="../index.html" class="footer-btn">Hovedside</a>
     <a href="Prosjekter.html" class="footer-btn">Prosjekter</a>
     <a href="cv.html" class="footer-btn">CV</a>
   </footer>
