--- a/Public/Prosjekter.html
+++ b/Public/Prosjekter.html
@@ -98,7 +98,7 @@
  <script src="js/script.js"></script>
 </body>
 <footer>
-  <a href="index.html" class="footer-btn">Hovedside</a>
+  <a href="../index.html" class="footer-btn">Hovedside</a>
   <a href="OmMeg.html" class="footer-btn">Om meg</a>
   <a href="cv.html" class="footer-btn">CV</a>
 </footer>
