--- a/Public/cv.html
+++ b/Public/cv.html
@@ -152,7 +152,7 @@
     <script src="js/script.js"></script>
   </body>
   <footer>
-    <a href="index.html" class="footer-btn">Hovedside</a>
+    <a href="../index.html" class="footer-btn">Hovedside</a>
     <a href="OmMeg.html" class="footer-btn">Om meg</a>
     <a href="Prosjekter.html" class="footer-btn">Prosjekter</a>
   </footer>
