--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hovedside</title>
     <link rel="icon" href="Images/Logo Portfolio.png" />
-    <link rel="stylesheet" href="CSS/Homepage.css" />
+    <link rel="stylesheet" href="Public/CSS/Homepage.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Bangers&family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
       rel="stylesheet"
     />
   </head>
   <header>
-    <img src="Images/Logo Portfolio.png" alt="Logo" />
+    <img src="Public/Images/Logo Portfolio.png" alt="Logo" />
   </header>
   <body>
     <h2>Velkommen</h2>
-    <script src="js/script.js"></script>
+    <script src="Public/js/script.js"></script>
   </body>
   <footer>
-    <a href="OmMeg.html" class="footer-btn">Om Meg</a>
-    <a href="Prosjekter.html" class="footer-btn">Prosjekter</a>
-    <a href="cv.html" class="footer-btn">CV</a>
+    <a href="Public/OmMeg.html" class="footer-btn">Om Meg</a>
+    <a href="Public/Prosjekter.html" class="footer-btn">Prosjekter</a>
+    <a href="Public/cv.html" class="footer-btn">CV</a>
   </footer>
 </html>
