--- a/Public/cv.html
+++ b/Public/cv.html
@@ -23,7 +23,7 @@
       <h2>Dawid Cieslinski</h2>
       <ul>
         <li>Telefonnummer: 99879693</li>
-        <li>E-mail: dawid.cieslinski@gmail.com</li>
+        <li>E-mail: dawid.cieslinski020608@gmail.com</li>
         <li>Adresse: Gleinåsveien 15, 3440, RØYKEN</li>
         
       </ul>
