--- a/Public/cv.html
+++ b/Public/cv.html
@@ -23,53 +23,64 @@
       <h2>Dawid Cieslinski</h2>
       <ul>
         <li>Telefonnummer: 99879693</li>
-        <li>E-mail: dawid.cieslinski020608@gmail.com</li>
+        <li>E-mail: </li>
+        <li>dawid.cieslinski020608@gmail.com</li>
         <li>Adresse: Gleinåsveien 15, 3440, RØYKEN</li>
-        
       </ul>
       <h1>
-        Elev på Bleiker Videregående. Går på IT og medie første året og jeg
-        lærer nå hvordan jeg skal designe, filme og programmere. Drømmekarriere
-        er Cybersecurity og fortsetter å jobbe med å nå drømmen. Sertifisert
-        kretsdommer av Norges Svømmeforbund og profesjonell svømmer. Er også en
-        Ansatt på Shell Vettre og har erfæring med salg og service.
+        Elev på Bleiker Videregående. Gikk på IT og medie første året og jeg
+        lærte hvordan jeg skulle designe, filme og programmere. Jeg går nå andre
+        året på IT og jeg skal lære om utvikling, brukerstøtte osv.
+        Drømmekarriere er Cybersecurity og jeg fortsetter med å jobbe for å nå drømmen.
+        Sertifisert kretsdommer av Norges Svømmeforbund og profesjonell svømmer.
+        Er også en Ansatt på Shell Vettre og har erfæring med salg og service.
       </h1>
       <div id="cvInnhold">
-        <br>
-        <hr/>
-        <br>
+        <br />
+        <hr />
+        <br />
         <h3>Utdanning</h3>
         <h4>2022.08-2024.06</h4>
         <h4>Vollen Ungdomskole</h4>
         <ul>
           <li>Python for matte</li>
         </ul>
-        <br>
-        <hr id="underSec">
+        <br />
+        <hr id="underSec" />
         <h4>2024.08 - 2026.06</h4>
         <h4>Bleiker Videregående</h4>
         <h6>Konseputvikling og Programmering</h6>
         <ul>
-          <li>Lærte Html og Css og brukte den for å skape nettsider.
+          <li>Lærte Html og Css og brukte den for å skape nettsider.</li>
+          <li>
+            Lagde designmanualer for å vise funskjoner, fargene, bilder brukt og
+            hvem som er målgruppen.
           </li>
-          <li>Lagde designmanualer for å vise funskjoner, fargene, bilder brukt og hvem som er målgruppen.</li>
-          <li>Lærte Javascript og brukte den for å skape funskjoner i nettsiden for brukere. </li>
-          <li>Har jobbet med databaser og har koblet dem sammen for å få registrert brukeren og kryptere passordet hans/hennes</li>
+          <li>
+            Lærte Javascript og brukte den for å skape funskjoner i nettsiden
+            for brukere.
+          </li>
+          <li>
+            Har jobbet med databaser og har koblet dem sammen for å få
+            registrert brukeren og kryptere passordet hans/hennes
+          </li>
         </ul>
-        <br>
-        <br>
+        <br />
+        <br />
         <h6>Produksjon og Historiefortelling</h6>
         <ul>
-          <li>Redigerte Videoer, Bilder for å gjøre dem om til ferdig produkt</li>
+          <li>
+            Redigerte Videoer, Bilder for å gjøre dem om til ferdig produkt
+          </li>
           <li>Designet Logo, Layouts og Plakater i timene</li>
           <li>
             Kom i finalen på innovasjonscamp 2024 for å designe en app for Asker
             kommune
           </li>
         </ul>
-        <br>
-        <hr/>
-        <br>
+        <br />
+        <hr />
+        <br />
         <h3>Arbeidserfaring</h3>
         <h4>2023.10</h4>
         <h4>Kundemedarbeider (Shell Vettre)</h4>
@@ -77,23 +88,23 @@
           <li>Erfaring i Salg og Service</li>
           <li>Erfaring med matlagging og baking</li>
         </ul>
-        <hr id="underSec">
+        <hr id="underSec" />
         <h4>2024.06</h4>
         <h4>Kretsdommer (Norges Svømmeforbund)</h4>
         <ul>
           <li>Erfaring som dommer i svømming</li>
           <li>Erfaring med regler i svømming</li>
         </ul>
-        <hr id="underSec">
+        <hr id="underSec" />
         <h4>2023.02 - 2023.02</h4>
         <h4>Jobbet på Burger King (Hospitering)</h4>
         <ul>
           <li>Matlagging</li>
           <li>Matpreperasjon</li>
         </ul>
-        <br>
-        <hr/>
-        <br>
+        <br />
+        <hr />
+        <br />
         <h3>Ferdigheter</h3>
         <h4>Språk</h4>
         <ul>
@@ -104,7 +115,7 @@
           <li>Polsk (Muntlig) - Middels</li>
           <li>Polsk (Skriftig) - Lav/Middels</li>
         </ul>
-        <hr id="underSec">
+        <hr id="underSec" />
         <h4>Digitale Ferdigheter</h4>
         <ul>
           <li>Kan Visual Studio Code</li>
@@ -115,9 +126,9 @@
           <li>Kan Javascript</li>
           <li>Kan Python</li>
         </ul>
-        <br>
-        <hr/>
-        <br>
+        <br />
+        <hr />
+        <br />
         <h3>Kurser</h3>
 
         <h4>2024.05</h4>
@@ -126,9 +137,9 @@
           <li>Fikk sertifikat som kretsdommer</li>
           <li>Fikk erfaring med regler i svømming</li>
         </ul>
-        <br>
-        <hr/>
-        <br>
+        <br />
+        <hr />
+        <br />
         <h3>Interesser</h3>
         <ul>
           <li>Svømming</li>
@@ -138,15 +149,14 @@
           <li>Lage logo</li>
           <li>Lesing</li>
         </ul>
-        <br>
-        <hr/>
-        <br>
+        <br />
+        <hr />
+        <br />
         <h3>Referanser</h3>
         <h4>Patrick Andre Fuglehaug Detlefsen (Lærer)</h4>
         <ul>
           <li>patrickdet@afk.no</li>
         </ul>
-          
       </div>
     </div>
     <script src="js/script.js"></script>
