--- a/Public/cv.html
+++ b/Public/cv.html
@@ -28,41 +28,38 @@
         <li>Adresse: Gleinåsveien 15, 3440, RØYKEN</li>
       </ul>
       <h1>
-        Elev på Bleiker Videregående. Gikk på IT og medie første året og jeg
-        lærte hvordan jeg skulle designe, filme og programmere. Jeg går nå andre
-        året på IT og jeg skal lære om utvikling, brukerstøtte osv.
         Drømmekarriere er Cybersecurity og jeg fortsetter med å jobbe for å nå drømmen.
-        Sertifisert kretsdommer av Norges Svømmeforbund og profesjonell svømmer.
-        Er også en Ansatt på Shell Vettre og har erfæring med salg og service.
+        Sertifisert kretsdommer av Norges Svømmeforbund og profesjonell svømmer. Har interesser innefor å
+        lære nye ting og eventuelt mestre dem
+        
       </h1>
       <div id="cvInnhold">
         <br />
         <hr />
         <br />
         <h3>Utdanning</h3>
-        <h4>2022.08-2024.06</h4>
-        <h4>Vollen Ungdomskole</h4>
+        <h4>2022.08-2024.06, Vollen Ungdomskole</h4>
         <ul>
           <li>Python for matte</li>
         </ul>
         <br />
         <hr id="underSec" />
-        <h4>2024.08 - 2026.06</h4>
         <h4>Bleiker Videregående</h4>
+        <h4>2024.08 - 2025.06, IT og medieproduksjon (VG1)</h4>
         <h6>Konseputvikling og Programmering</h6>
         <ul>
           <li>Lærte Html og Css og brukte den for å skape nettsider.</li>
           <li>
-            Lagde designmanualer for å vise funskjoner, fargene, bilder brukt og
+            Lagde designmanualer for å vise funskjoner, fargene, brukte bilder og
             hvem som er målgruppen.
           </li>
           <li>
-            Lærte Javascript og brukte den for å skape funskjoner i nettsiden
+            Lærte Javascript og brukte den for å skape funskjoner på nettsiden
             for brukere.
           </li>
           <li>
             Har jobbet med databaser og har koblet dem sammen for å få
-            registrert brukeren og kryptere passordet hans/hennes
+            registrert brukeren og kryptere passord.
           </li>
         </ul>
         <br />
@@ -70,7 +67,7 @@
         <h6>Produksjon og Historiefortelling</h6>
         <ul>
           <li>
-            Redigerte Videoer, Bilder for å gjøre dem om til ferdig produkt
+            Redigerte Videoer, Bilder for å gjøre dem om til et ferdig produkt
           </li>
           <li>Designet Logo, Layouts og Plakater i timene</li>
           <li>
@@ -82,22 +79,20 @@
         <hr />
         <br />
         <h3>Arbeidserfaring</h3>
-        <h4>2023.10</h4>
-        <h4>Kundemedarbeider (Shell Vettre)</h4>
+        <h4>2023.10 - D.d, Kundemedarbeider (Shell Vettre)</h4>
         <ul>
           <li>Erfaring i Salg og Service</li>
           <li>Erfaring med matlagging og baking</li>
         </ul>
         <hr id="underSec" />
-        <h4>2024.06</h4>
-        <h4>Kretsdommer (Norges Svømmeforbund)</h4>
+        <h4>2024.06 - D.d, Kretsdommer (Norges Svømmeforbund)</h4>
         <ul>
           <li>Erfaring som dommer i svømming</li>
           <li>Erfaring med regler i svømming</li>
         </ul>
         <hr id="underSec" />
-        <h4>2023.02 - 2023.02</h4>
-        <h4>Jobbet på Burger King (Hospitering)</h4>
+        <h4></h4>
+        <h4>2023.02 - 2023.02, Burger King (Hospitering)</h4>
         <ul>
           <li>Matlagging</li>
           <li>Matpreperasjon</li>
