--- a/Public/Prosjekter.html
+++ b/Public/Prosjekter.html
@@ -21,28 +21,27 @@
  <div class="prosjekter">
   <div class="bildeOgTekst">
     <img id="dagBladet" src="Images/dagbladet.png" alt="Bilde av prosjekt ">
-    <p>Dette her er en kopi av en nettside som jeg lagde for å lære meg html og css. Jeg hadde
-      ingen designmanual eller design i det hele tatt. Jeg kunne helle ikke noe om å medie queries så jeg lagde ikke den
-      for mobil versjonen. Jeg har heller ikke brukt noe javascript så den hadde ingen interaktivitet.
+    <p>Dette her er en kopi av Dagbladet sin nettside. Jeg hadde
+      ingen designmanual eller tanker på design. Jeg kunne heller ikke noe om medie queries så universell utforming er
+      ueksisterende. Jeg har heller ikke brukt noe javascript så den hadde ingen generelt funksjon.
       Link: <a href="https://github.com/Destroyerofdarkness/DagbladetWeb">DagbladetWeb</a>
     </p>
     
   </div>
   <div class="bildeOgTekst">
     <img id="Portfolio" src="Images/Logo Portfolio.png" alt="Bilde av prosjekt ">
-    <p>Jeg lagde den nye portfolio nettsiden på grunn av jeg var ikke fornøyd 
-      med designet så da lagde jeg en ny. Først så begynte jeg med designen og designmanualen og da kom jeg fram til gull og 
-      marin blå farge for bakgrunnen og tekst. Etterpå så programmerte jeg alt og jeg brukte cursor for å hjelpe meg å gjøre 
-      nettsiden responsivt og lage en mobil versjonen av den. Link: <a href="https://github.com/Destroyerofdarkness/PortfolioNew">PortfolioNew</a>
+    <p>Jeg lagde den nye portfolio nettsiden fordi jeg var misfornøyd 
+      med designet. Først så begynte jeg med designen og designmanualen og da kom jeg fram til gull og 
+      marin blå som primærfarger. Jeg brukte cursor for å gjøre 
+      nettsiden responsivt og lage en mobil versjon av den. Link: <a href="https://github.com/Destroyerofdarkness/PortfolioNew">PortfolioNew</a>
     </p>
   </div>
   <div class="bildeOgTekst">
     <img id="AskerQuiz" src="Images/AskerQuiz.png" alt="Bilde av prosjekt ">
     <p>
-      Den nettsiden lagde jeg på grunn av jeg hadde en prosjekt
-      om å lage en lokasjon gjetting nettside så lagde jeg designmanualen, logoen også til slutt 
+      Denne nettsiden handler om lokasjon gjetting. Jeg har lagd designmanualen, logoen også til slutt 
       så programmerte jeg nettsiden. Jeg har brukt javascript for å få overlays for de forskjellige
-      fanene. Jeg ville gjøre det slik at det var mer som en app enn en nettside med mange faner.
+      fanene. Jeg gjorde de slik at nettsiden skulle være mer app lignende.
     Link: <a href="https://github.com/Destroyerofdarkness/AskerQuiz">AskerQuiz</a>
     </p>
   </div>
@@ -50,8 +49,8 @@
  <div class="prosjekter" id="secBox">
   <div class="bildeOgTekst">
     <img id="Shoe" src="Images/shoelogo.jpg" alt="Bilde av prosjekt ">
-    <p>Dette prosjektet handlet om å designe en skoapp som selger brukte sko. Så det jeg gjorde først er å ta bilder av det 
-      jeg skal brukes som mine sko for salg. Etterpå så drev jeg og designet hvordan det skal se ut med 3 forskjellige farger.
+    <p>Dette prosjektet handlet om å designe en skoapp som skal selge brukte sko. Så det jeg gjorde først var å ta bilder av skoene for salg.
+      Etterpå så drev jeg med å designet hvordan appen skulle se ut med 3 forskjellige farger.
       Jeg kom fram til å bruke blå farge som primærfargen for designet.
       Design: <a href="https://akershusfylke-my.sharepoint.com/:i:/g/personal/dawidc_afk_no/EZ6mKZ2w4WtOsrt6D3gjr9IBPCM8w3lIcZMV6M9tzwktDA?e=qlJ18D">Shoe</a>
     </p>
@@ -64,11 +63,9 @@
   <div class="bildeOgTekst">
     <img id="Anihaven" src="Images/MainLogo AniHaven.png" alt="Bilde av prosjekt ">
     <p>
-      Den nettsiden lagde jeg på grunn av jeg hadde en prosjekt
-      om å lage Interaktiv nettside som skulle vise min arbeid med
-      javascript. Jeg lagde en pirat nettside hvor en kunne se anime episoder gratis uten noen reklamer.
-      Jeg lagde designmanualen og logo også programmerte nettsiden. Jeg har brukt javascript for å få overlays for de forskjellige 
-      animeene.
+      Jeg lagde en pirat nettside hvor man kunne se anime episoder gratis uten noen reklamer.
+      Jeg lagde designmanualen og logo og til slutt programmerte nettsiden. Jeg har brukt javascript for å få overlays for de forskjellige 
+      animeene og seksjonene.
     Link: <a href="https://github.com/Destroyerofdarkness/InteraktivWeb">AniHaven</a>
     </p>
   </div>
