--- a/Public/cv.html
+++ b/Public/cv.html
@@ -126,8 +126,7 @@
         <br />
         <h3>Kurser</h3>
 
-        <h4>2024.05</h4>
-        <h4>Norges Svømmeforbunds Kretsdommer kurset</h4>
+        <h4>2024.05 - D.d, Norges Svømmeforbunds Kretsdommer kurset</h4>
         <ul>
           <li>Fikk sertifikat som kretsdommer</li>
           <li>Fikk erfaring med regler i svømming</li>
