--- a/Public/cv.html
+++ b/Public/cv.html
@@ -22,9 +22,9 @@
       <img src="Images/BildeCV.jpg" alt="Bilde av meg" />
       <h2>Dawid Cieslinski</h2>
       <ul>
+        <li>Fødselsdato: 02.06.2008</li>
         <li>Telefonnummer: 99879693</li>
-        <li>E-mail: </li>
-        <li>dawid.cieslinski020608@gmail.com</li>
+        <li>E-mail: dawid.cieslinski020608@gmail.com </li>
         <li>Adresse: Gleinåsveien 15, 3440, RØYKEN</li>
       </ul>
       <h1>
@@ -147,7 +147,7 @@
         <hr />
         <br />
         <h3>Referanser</h3>
-        <h4>Patrick Andre Fuglehaug Detlefsen (Lærer)</h4>
+        <h4>Patrick Andre Fuglehaug Detlefsen (IT Lærer)</h4>
         <ul>
           <li>patrickdet@afk.no</li>
         </ul>
