--- a/Public/cv.html
+++ b/Public/cv.html
@@ -79,13 +79,13 @@
         <hr />
         <br />
         <h3>Arbeidserfaring</h3>
-        <h4>2023.10 - D.d, Kundemedarbeider (Shell Vettre)</h4>
+        <h4>2023.10 - d.d, Kundemedarbeider (Shell Vettre)</h4>
         <ul>
           <li>Erfaring i Salg og Service</li>
           <li>Erfaring med matlagging og baking</li>
         </ul>
         <hr id="underSec" />
-        <h4>2024.06 - D.d, Kretsdommer (Norges Svømmeforbund)</h4>
+        <h4>2024.06 - d.d, Kretsdommer (Norges Svømmeforbund)</h4>
         <ul>
           <li>Erfaring som dommer i svømming</li>
           <li>Erfaring med regler i svømming</li>
@@ -126,7 +126,7 @@
         <br />
         <h3>Kurser</h3>
 
-        <h4>2024.05 - D.d, Norges Svømmeforbunds Kretsdommer kurset</h4>
+        <h4>2024.05 - d.d, Norges Svømmeforbunds Kretsdommer kurset</h4>
         <ul>
           <li>Fikk sertifikat som kretsdommer</li>
           <li>Fikk erfaring med regler i svømming</li>
