--- a/Public/cv.html
+++ b/Public/cv.html
@@ -149,7 +149,11 @@
         <h3>Referanser</h3>
         <h4>Patrick Andre Fuglehaug Detlefsen (IT Lærer)</h4>
         <ul>
-          <li>patrickdet@afk.no</li>
+          <li>E-mail: patrickdet@afk.no</li>
+        </ul>
+        <h4>Yngve Sollien (Daglig Leder Sollien veiservice AS)</h4>
+        <ul>
+          <li>Telefonnummer: +47 921 21 656</li>
         </ul>
       </div>
     </div>
