Changed som text in the Cv

--- a/Public/cv.html
+++ b/Public/cv.html
@@ -79,7 +79,7 @@
         <hr />
         <br />
         <h3>Arbeidserfaring</h3>
-        <h4>2023.10 - d.d, Kundemedarbeider (Shell Vettre)</h4>
+        <h4>2023.10 - d.d, Butikkmedarbeider (Shell Vettre)</h4>
         <ul>
           <li>Erfaring i Salg og Service</li>
           <li>Erfaring med matlagging og baking</li>
